chore(wip): adding protobuf support
